# DubaiProposal

./: .gitignore  BrineWatch_PFH2026_Submission_Draft.tex  BrineWatch_Proposal.tex  README.md
brinewatch/: .gitignore  README.md  conftest.py  pyproject.toml  pytest.ini
brinewatch/brinewatch/: __init__.py
brinewatch/configs/: benchmark.yaml  benchmark_dynamic.yaml  benchmark_static.yaml  holoocean_live.yaml  mission_default.yaml  pfh2026_custom.yaml  pfh2026_flagship_custom.yaml  pfh2026_flagship_demo.yaml  pfh2026_flagship_volumetric.yaml  pfh2026_holoocean.yaml  pfh2026_screening_clear.yaml  pfh2026_screening_review.yaml
brinewatch/docs/: architecture.md  assumptions.md  holoocean_notes.md  sim_to_real.md
brinewatch/outputs/: README.md
brinewatch/scripts/: analyze_motion.py  build_competition_report.py  build_competition_visuals.py  build_dashboard.py  build_fasttrack_report.py  build_fasttrack_visuals.py  build_feasibility_assets.py  build_public_competition_assets.py  build_public_competition_report.py  build_site_history_demo.py  build_technical_evidence_appendix.py  capture_cinematic_inspection.py  capture_isolated_cinematic_1080p.py  capture_scene_views.py  check_pdf_size.py  compare_localization_modes.py  custom_sonar_conditions.py  evaluate_official_levels.py  evaluate_sonar_detector.py  explore_pierharbor.py  inspect_holoocean.py  inspect_outfall_scene.py  launch_custom_engine.py  localize_custom_outfall.py  localize_custom_v2.py  make_competition_video.py  make_demo_video.py  make_fasttrack_competition_video.py  make_mission_movie.py  run_benchmark.py  (+19 more)
(+201 files in other folders)
