[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "brinewatch"
version = "0.1.0"
description = "Autonomous monitoring of desalination brine plumes with a BlueROV2 in HoloOcean"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "BrineWatch team" }]
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "matplotlib>=3.7",
    "PyYAML>=6.0",
]

[project.optional-dependencies]
sim = []  # HoloOcean is installed separately (not on PyPI); see README.
dev = ["pytest>=7.0"]

[tool.setuptools.packages.find]
include = ["brinewatch*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
